// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deploy-app > Deploy append for schema broken app if onSchemaBreak = AppendApp 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
WARN: Detected a breaking app schema change in app APP_1: | [{"from":{"globalInts":3,"globalByteSlices":2,"localInts":2,"localByteSlices":2,"extraProgramPages":0},"to":{"globalByteSlices":3,"globalInts":3,"localByteSlices":2,"localInts":2,"extraProgramPages":0}}]
INFO: onSchemaBreak=AppendApp, will attempt to create a new app
VERBOSE: Sent transaction ID TXID_2 appl from ACCOUNT_1
DEBUG: App created by ACCOUNT_1 with ID APP_2 via transaction TXID_2"
`;

exports[`deploy-app > Deploy append for update app if onUpdate = AppendApp 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
INFO: Detected a TEAL update in app APP_1 for creator ACCOUNT_1
INFO: onUpdate=AppendApp, will attempt to create a new app
VERBOSE: Sent transaction ID TXID_2 appl from ACCOUNT_1
DEBUG: App created by ACCOUNT_1 with ID APP_2 via transaction TXID_2"
`;

exports[`deploy-app > Deploy failure for replacement of permanent, updated app 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
INFO: Detected a TEAL update in app APP_1 for creator ACCOUNT_1
WARN: App is not deletable and onUpdate=ReplaceApp, will attempt to create new app and delete old app, delete will most likely fail
INFO: Deploying a new test app for ACCOUNT_1; deploying app with version 2.0.
WARN: Deleting existing test app with id APP_1 from ACCOUNT_1 account.
ERROR: Received error executing Atomic Transaction Composer, for more information enable the debug flag | [{"cause":{}}]"
`;

exports[`deploy-app > Deploy failure for replacement of schema broken app fails if onSchemaBreak = Fail 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
WARN: Detected a breaking app schema change in app APP_1: | [{"from":{"globalInts":3,"globalByteSlices":2,"localInts":2,"localByteSlices":2,"extraProgramPages":0},"to":{"globalByteSlices":3,"globalInts":3,"localByteSlices":2,"localInts":2,"extraProgramPages":0}}]"
`;

exports[`deploy-app > Deploy failure for updated app fails if onupdate = Fail 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
INFO: Detected a TEAL update in app APP_1 for creator ACCOUNT_1"
`;

exports[`deploy-app > Deploy new app 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: App test not found in apps created by ACCOUNT_1; deploying app with version 1.0.
VERBOSE: Sent transaction ID TXID_1 appl from ACCOUNT_1
DEBUG: App created by ACCOUNT_1 with ID APP_1 via transaction TXID_1"
`;

exports[`deploy-app > Deploy replacement of deletable schema broken app 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
WARN: Detected a breaking app schema change in app APP_1: | [{"from":{"globalInts":3,"globalByteSlices":2,"localInts":2,"localByteSlices":2,"extraProgramPages":0},"to":{"globalByteSlices":3,"globalInts":3,"localByteSlices":2,"localInts":2,"extraProgramPages":0}}]
INFO: App is deletable and onSchemaBreak=ReplaceApp, will attempt to create new app and delete old app
INFO: Deploying a new test app for ACCOUNT_1; deploying app with version 2.0.
WARN: Deleting existing test app with id APP_1 from ACCOUNT_1 account.
WARN: Sent transactions TXID_2 to create app with id APP_2 and TXID_3 to delete app with id APP_1 from ACCOUNT_1 account."
`;

exports[`deploy-app > Deploy replacement to deletable, updated app 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
INFO: Detected a TEAL update in app APP_1 for creator ACCOUNT_1
WARN: App is deletable and onUpdate=ReplaceApp, creating new app and deleting old app...
INFO: Deploying a new test app for ACCOUNT_1; deploying app with version 2.0.
WARN: Deleting existing test app with id APP_1 from ACCOUNT_1 account.
WARN: Sent transactions TXID_2 to create app with id APP_2 and TXID_3 to delete app with id APP_1 from ACCOUNT_1 account."
`;

exports[`deploy-app > Deploy replacement to schema broken, permanent app fails 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
WARN: Detected a breaking app schema change in app APP_1: | [{"from":{"globalInts":3,"globalByteSlices":2,"localInts":2,"localByteSlices":2,"extraProgramPages":0},"to":{"globalByteSlices":3,"globalInts":3,"localByteSlices":2,"localInts":2,"extraProgramPages":0}}]
INFO: App is not deletable but onSchemaBreak=ReplaceApp, will attempt to delete app, delete will most likely fail
INFO: Deploying a new test app for ACCOUNT_1; deploying app with version 2.0.
WARN: Deleting existing test app with id APP_1 from ACCOUNT_1 account.
ERROR: Received error executing Atomic Transaction Composer, for more information enable the debug flag | [{"cause":{}}]"
`;

exports[`deploy-app > Deploy update to immutable updated app fails 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
INFO: Detected a TEAL update in app APP_1 for creator ACCOUNT_1
WARN: App is not updatable but onUpdate=UpdateApp, will attempt to update app, update will most likely fail
INFO: Updating existing test app for ACCOUNT_1 to version 2.0.
ERROR: Received error executing Atomic Transaction Composer and debug flag enabled; attempting simulation to get more information | [{"cause":{},"traces":[]}]"
`;

exports[`deploy-app > Deploy update to updatable updated app 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
INFO: Detected a TEAL update in app APP_1 for creator ACCOUNT_1
INFO: App is updatable and onUpdate=UpdateApp, updating app...
INFO: Updating existing test app for ACCOUNT_1 to version 2.0.
VERBOSE: Sent transaction ID TXID_2 appl from ACCOUNT_1
DEBUG: App APP_1 updated  by ACCOUNT_1 via transaction TXID_2"
`;

exports[`deploy-app > Do nothing if deploying app with no changes 1`] = `
"INFO: Idempotently deploying app "test" from creator ACCOUNT_1 using 11890 bytes of teal code and 39 bytes of teal code
INFO: Existing app test found by creator ACCOUNT_1, with app id APP_1 and version 1.0.
DEBUG: No detected changes in app, nothing to do."
`;
